@@ -287,6 +287,9 @@ Release 2.7.3 - UNRELEASED
     YARN-4344. NMs reconnecting with changed capabilities can lead to wrong
     cluster resource calculations (Varun Vasudev via jlowe)
 
+    YARN-3840. Resource Manager web ui issue when sorting application by id
+    (with application having id > 9999) (Mohammad Shahid Khan & Varun Saxena)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
